--- a/config/samples/v1alpha1_kruize.yaml
+++ b/config/samples/v1alpha1_kruize.yaml
@@ -4,11 +4,13 @@ metadata:
   labels:
     app.kubernetes.io/name: kruize-operator
     app.kubernetes.io/managed-by: kustomize
-  name: monitoring
+  name: kruize-sample
 spec:
-  cluster_type: "minikube"
+  cluster_type: "openshift"
   size: 3
-  Non_interactive: 1
-  Use_yaml_build: 0	
-  Autotune_configmaps: "autotune-configmaps"
-  Namespace: "test-operator"  
+  autotune_version: "0.2"
+  autotune_ui_version: "0.0.9"
+  non_interactive: 1
+  use_yaml_build: 0	
+  autotune_configmaps: "autotune-configmaps"
+  namespace: "test-operator"
